fix(style): barcode overflow for long codes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -69,3 +69,8 @@ input.mat-input-element {
   align-items: center;
   justify-content: space-around;
 }
+.barcode {
+  overflow: hidden;
+  white-space: nowrap; 
+  text-overflow: ellipsis;
+}
